# GDPHYSX

./: .gitignore  CMakeLists.txt  CMakePresets.json  GDPHYSX.sln  GDPHYSX.vcxproj  GDPHYSX.vcxproj.filters  main.cpp
Dependencies/include/glm/: CMakePresets.json  main.cpp
Physics/: ContactResolver.cpp  ContactResolver.h  ParticleContact.cpp  ParticleContact.h  ParticleLink.cpp  ParticleLink.h  PhysicsParticle.cpp  PhysicsParticle.h  PhysicsWorld.cpp  PhysicsWorld.h
Physics/ForceGenerator/: DragForceGenerator.cpp  DragForceGenerator.h  ForceGenerator.h  ForceRegistry.cpp  ForceRegistry.h  GravityForceGenerator.cpp  GravityForceGenerator.h
Physics/Rods/: Chain.cpp  Chain.h  Rod.cpp  Rod.h
Physics/Springs/: AnchoredSpring.cpp  AnchoredSpring.h
Shaders/: shader.frag
model3D/: model3D.cpp  model3D.h
